Adding imagery page content

--- a/_includes/_sass/subpage.scss
+++ b/_includes/_sass/subpage.scss
@@ -1,6 +1,7 @@
 /* Style subpage */
 
 @import "colors-subpage";
+@import "imagery-subpage";
 
 .subpage-category {
 	background-image: url("{{site.baseurl}}/img/wikia-universe.jpg");
