--- a/_layouts/subpage.html
+++ b/_layouts/subpage.html
@@ -8,3 +8,4 @@ contentClass: subpage
 <div class="container-inner">
 	{{content}}
 </div>
+{% include subpage-footer.html prevText=page.prevText prevLink=page.prevLink nextText=page.nextText nextLink=page.nextLink %}
