--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -300,30 +300,48 @@ p {
   border-radius: 120px;
   height: 120px;
   margin-bottom: 27px;
+  position: relative;
   width: 120px;
 }
-
 /* line 26, ../_sass/colors-subpage.scss */
+.color-probe:hover {
+  border: 1px solid #c7d1d8;
+  background: url("{{site.baseurl}}/img/copy-icon.png") white no-repeat 50% 30%;
+}
+/* line 29, ../_sass/colors-subpage.scss */
+.color-probe:hover::after {
+  color: #0a5fa3;
+  content: "Copy color value";
+  left: 0;
+  line-height: 1.2em;
+  padding-top: 50px;
+  padding: 60px 15px 0 15px;
+  position: absolute;
+  text-align: center;
+  top: 0;
+}
+
+/* line 43, ../_sass/colors-subpage.scss */
 .mordor-bg-color {
   background-color: black;
 }
 
-/* line 30, ../_sass/colors-subpage.scss */
+/* line 47, ../_sass/colors-subpage.scss */
 .dark-knight-bg-color {
   background-color: #092140;
 }
 
-/* line 34, ../_sass/colors-subpage.scss */
+/* line 51, ../_sass/colors-subpage.scss */
 .cool-blue-bg-color {
   background-color: #0a5fa3;
 }
 
-/* line 38, ../_sass/colors-subpage.scss */
+/* line 55, ../_sass/colors-subpage.scss */
 .walter-white-bg-color {
   background-color: #c7d1d8;
 }
 
-/* line 42, ../_sass/colors-subpage.scss */
+/* line 59, ../_sass/colors-subpage.scss */
 .winterfell-bg-color {
   background-color: white;
   border: 1px solid #c7d1d8;
